tests/snapshots/integration_tests__anyhow_macro_contextual_error_display.snap
---
source: tests/integration_tests.rs
expression: "format!(\"{}\", contextual_err)"
snapshot_kind: text
---
additional context [value=42, operation=login, debug_data=["a", "b"]]
