tests/snapshots/integration_tests__anyhow_macro_error_debug.snap
---
source: tests/integration_tests.rs
expression: "format!(\"{:?}\", err)"
snapshot_kind: text
---
User 'alice' failed to log in

Fields:
	value: "42",
	operation: "login",
	debug_data: "[\"a\", \"b\"]"
