tests/snapshots/integration_tests__bail_macro_error_debug.snap
---
source: tests/integration_tests.rs
expression: "format!(\"{:?}\", err)"
snapshot_kind: text
---
Authentication failed

Fields:
	user_id: "\"user-123\"",
	attempt: "3"
