tests/snapshots/integration_tests__bail_macro_error_display.snap
---
source: tests/integration_tests.rs
expression: "format!(\"{}\", err)"
snapshot_kind: text
---
Authentication failed [user_id="user-123", attempt=3]
