tests/snapshots/integration_tests__context_option_error_debug.snap
---
source: tests/integration_tests.rs
expression: "format!(\"{:?}\", err)"
snapshot_kind: text
---
Value was missing

Fields:
	variable_name: "port"
