tests/snapshots/integration_tests__context_result_error_debug.snap
---
source: tests/integration_tests.rs
expression: "format!(\"{:?}\", err)"
snapshot_kind: text
---
File operation failed

Caused by:
    file not found

Fields:
	filename: "config.toml"
