tests/snapshots/integration_tests__context_result_error_display.snap
---
source: tests/integration_tests.rs
expression: "format!(\"{}\", err)"
snapshot_kind: text
---
File operation failed [filename=config.toml]
